# Engine

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
app/include/: App.hpp
app/src/: App.cpp
editor/: CMakelists.txt
editor/include/: UIManager.hpp
editor/src/: UIManager.cpp
engine/: CMakeLists.txt
engine/include/: Renderer.hpp
engine/include/core/: Scene.hpp  SceneManager.hpp
engine/include/platform/: WindowsImpl.hpp
engine/include/render/: D3D11Renderer.hpp  IRenderer.hpp  ResourceManager.hpp
engine/include/utils/: Errors.hpp  Time.hpp
engine/src/: Renderer.cpp
engine/src/core/: Scene.cpp  SceneManager.cpp
engine/src/platform/: WindowsImpl.cpp
engine/src/render/: D3D11Renderer.cpp  IRenderer.cpp  ResourceManager.cpp
engine/src/utils/: Time.cpp
